grafana/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: grafana
  name: grafana
  labels:
    app: grafana
spec:
  type: ClusterIP
  ports:
    - name: grafana
      port: 3000
      targetPort: 3000
  selector:
    app: grafana

---
      
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: grafana
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
          - containerPort: 3000
