grafana/promtail-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: promtail
  namespace: grafana
  labels:
    app.kubernetes.io/name: promtail
spec:
  selector:
    app.kubernetes.io/name: promtail
  ports:
    - name: http-metrics
      port: 9080
      targetPort: http-metrics
  type: ClusterIP
